# ranking-run

./: .env.example  .gitignore  App.tsx  CHANGELOG.md  CLAUDE.md  Caddyfile  app.config.ts  app.json  docker-compose.yml  eas.json  index.html  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_add_reviews_table.py  0003_add_difficulty_and_enhancements.py  0004_add_follows_and_events.py  0005_add_user_profile_fields.py  0006_add_course_favorites.py  0007_add_course_likes_and_optional_rating.py  0008_add_user_bio_and_instagram.py  0009_add_review_creator_reply.py  0010_add_external_imports.py  0011_add_strava_connections.py  0012_add_performance_indices.py  0013_add_device_tokens.py  0014_add_activity_region_and_gear.py  0015_add_run_speed_anomaly_flags.py  0016_add_course_type_lap_count.py  0017_add_raw_route_geometry.py  0018_add_user_country.py  0019_add_checkpoints.py  0020_add_phone_number_hash.py  0021_add_user_consent_fields.py  0022_extend_events_for_crews.py  0023_add_crew_chat_and_community.py  0024_add_user_code.py  0025_add_crew_name.py  0026_create_crews_table.py  0027_add_crew_id_to_community_posts.py  0028_add_crew_cover_image.py  0029_add_friend_requests.py  0030_add_crew_join_requests.py  0031_add_announcements.py  0032_add_group_runs.py  (+30 more)
backend/app/: celery_app.py  main.py
backend/tests/: conftest.py
(+486 files in other folders)
